[package]
name = "adventure"
version = "0.1.0"
authors = ["Brandon Fulljames <bfullj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "*"
specs = { version = "0.16.1", features = ["specs-derive"] }

